--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-select": "^5.8.0",
     "resend": "^3.2.0",
     "streamifier": "^0.1.1",
     "tailwindcss": "3.3.3",
