--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@ducanh2912/next-pwa": "^10.0.0",
     "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.4.1",
